0.11.21
Little fix in capabilities detection (only affects buggy firmwares)

0.11.20
Fixed handling of -xa and -xa1 options for dvd patched cdrecord versions in which case K3b
	had problems with the -dvd suffix in the version string.

0.11.19
Finally fixed mp3 file detection (I feared I was never going to find the problem)
Fixed bug which made the DataDvdJob delete an image even if none was created.
Fixed bug which made the iso image verification fail when writing in TAO mode.
Fixed crash when no DVD writer is present.
	
0.11.18
Fixed Cd-Text loading in audio projects.
Fixed data project character restrictions.
Little improvements to the device capabilities detection.
Once again improved writing speed detection. Hopefully this is the last time. ;)
Do not warn about cdrecord not running suid root on kernel 2.6.8 and above
K3bSetup now removes the suid root bit on kernel 2.6.8 an above systems.
K3bSetup now also sets the proper permissions on the generic devices.
Fixed handling of boot load segment 0 for "none-emulation" boo images

0.11.17
Fixed some DVD writing speed detection issues.
Always write pure Data CDs in TAO mode when using cdrecord since DAO fails on so many
	writers. There should not be any drawback.
Properly restrict the charset everywhere a file in a data project can be renamed.
	
0.11.16
Open the device read-only in case opening read/write failes.

0.11.15
Fixed writer detection issues with kernel >= 2.6.8 (this only means that K3b now openes the device
	read/write when issuing the MODE SELECT command. Nothing more. Tests with kernel 2.6.9-rc2
	on my system still produced problems)
Fixed Sox encoder plugin.
Fixed editing range for audio track length.

0.11.14
QT 3.1 compile fix (I keep forgetting these...)
Fixed ID3V2 Tag size calculation. This fixes mp3 file detection for some files.

0.11.13
Backported the new Mp3 file detection.
Fixed cddb local file naming for disc ids with less than 8 digits.