@@ -1,6 +1,7 @@
 0.11.21
 Little fix in capabilities detection (only affects buggy firmwares)
-
+Properly detect the Philips 2600
+	
 0.11.20
 Fixed handling of -xa and -xa1 options for dvd patched cdrecord versions in which case K3b
 	had problems with the -dvd suffix in the version string.
